--- a/home/templates/home/cart.html
+++ b/home/templates/home/cart.html
@@ -46,7 +46,7 @@
             <tfoot>
                 <tr>
                     <td colspan="3" class="text-right font-weight-bold">Total:</td>
-                    <td class="text-right font-weight-bold text-success">${{ total }}</td>
+                    <td class="text-right font-weight-bold text-success">${{ total_price }}</td>
                     <td></td>
                 </tr>
             </tfoot>
