--- a/templates/base.html
+++ b/templates/base.html
@@ -70,9 +70,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'view_cart' %}">Cart (
                                 {% if user.is_authenticated %}
-                                    {% with cart=user.cart.items.count %} 
-                                        {{ cart }} 
-                                    {% endwith %}
+                                    {{ cart_items_count }}
                                 {% else %}
                                     0
                                 {% endif %})
