--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_filters %} {# Load the custom filters for group membership #}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -57,13 +58,25 @@
                     </ul>
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                            </li>
+                            <li class="nav-item">
+                                <span class="nav-link">Groups: {{ user.groups.all|join:", " }}</span> {# Debugging output #}
+                            </li>
+                            {% if user|is_in_group:"Real Administrators" %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admin_panel' %}">Admin Panel</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <span class="nav-link">Not an admin</span> {# Debugging output #}
+                            </li>
+                            {% endif %}
                         {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                            </li>
                         {% endif %}
                     </ul>
                 </div>
