--- a/home/templates/home/no_permission.html
+++ b/home/templates/home/no_permission.html
@@ -1,22 +1,11 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends 'base.html' %}
 
-{% block title %}Permission Denied{% endblock %}
-
-{% block page_header %}
-<section class="hero-section text-white text-center py-3 bg-danger">
-    <div class="hero-overlay"></div>
-    <div class="hero-content">
-        <h1 class="display-4">Access Denied</h1>
-        <p class="lead">You don't have permission to view this page.</p>
-    </div>
-</section>
-{% endblock %}
+{% block title %}Access Denied{% endblock %}
 
 {% block content %}
-<div class="container mt-5 text-center">
-    <h2 class="mb-4">Oops! You don't have the necessary permissions to access this area.</h2>
-    <p>Please contact the site administrator if you believe this is an error.</p>
-    <a href="{% url 'home' %}" class="btn btn-primary mt-3">Return to Home</a>
+<div class="text-center mt-5">
+    <h2 class="display-4">Access Denied</h2>
+    <p class="lead">You do not have permission to view this page.</p>
+    <a href="{% url 'home' %}" class="btn btn-primary">Return to Home</a>
 </div>
 {% endblock %}
