--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,14 +1,30 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-{% load allauth %}
+{% load allauth account %}
 {% block head_title %}
     {% trans "Change Password" %}
 {% endblock head_title %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Change Password" %}
-    {% endelement %}
-    {% element p %}
-        {% trans 'Your password is now changed.' %}
-    {% endelement %}
+<div class="container my-5 py-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm border-0">
+                <div class="card-body p-4">
+                    <h1 class="display-6 mb-4 text-center" style="font-family: 'Playfair Display', serif;">
+                        {% trans "Change Password" %}
+                    </h1>
+                    <p class="text-center">
+                        {% trans 'Your password has been successfully changed.' %}
+                    </p>
+                    <div class="d-grid gap-2 mt-4">
+                        <a href="{% url 'account_login' %}" class="btn btn-primary btn-lg" style="font-family: 'Lora', serif;">
+                            {% trans "Sign In" %}
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
