--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -1,14 +1,24 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-{% load allauth %}
+{% load allauth account %}
+
 {% block head_title %}
     {% trans "Verify Your Email Address" %}
 {% endblock head_title %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Verify Your Email Address" %}
-    {% endelement %}
-    {% element p %}
-        {% blocktrans %}We have sent an email to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification email in your main inbox, check your spam folder. Please contact us if you do not receive the verification email within a few minutes.{% endblocktrans %}
-    {% endelement %}
+<div class="container my-2">
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-7">
+            <h1 class="display-4 text-center mb-2">
+                {% trans "Verify Your Email Address" %}
+            </h1>
+            <p class="lead text-center">
+                {% blocktrans %}
+                    We have sent an email to you for verification. Follow the link provided in the email to finalize the signup process. If you do not see the verification email in your main inbox, check your spam folder. Please contact us if you do not receive the verification email within a few minutes.
+                {% endblocktrans %}
+            </p>
+        </div>
+    </div>
+</div>
 {% endblock content %}
