--- a/templates/base.html
+++ b/templates/base.html
@@ -47,13 +47,13 @@
                             <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'view_cart' %}">Cart (
-                                {% if user.is_authenticated %}
-                                    {{ cart_items_count }}
-                                {% else %}
-                                    0
-                                {% endif %})
+                            <a class="nav-link" href="{% url 'view_cart' %}">
+                                Cart
+                                {% if user.is_authenticated and cart_items_count > 0 %}
+                                    ({{ cart_items_count }})
+                                {% endif %}
                             </a>
+                        </li>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
@@ -61,17 +61,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                             </li>
-                            <li class="nav-item">
-                                <span class="nav-link">Groups: {{ user.groups.all|join:", " }}</span> {# Debugging output #}
-                            </li>
                             {% if user|is_in_group:"Real Administrators" %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'admin_panel' %}">Admin Panel</a>
-                            </li>
-                            {% else %}
-                            <li class="nav-item">
-                                <span class="nav-link">Not an admin</span> {# Debugging output #}
-                            </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'admin_panel' %}">Admin Panel</a>
+                                </li>
                             {% endif %}
                         {% else %}
                             <li class="nav-item">
