--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
     {% block extra_meta %}
     {% endblock %}
 
+    <!-- Favicon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
