--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -3,13 +3,8 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="mt-5">Contact Us</h1>
+    <h1 class="mt-5"><i class="fa-regular fa-address-book"></i> Contact Us</h1>
     <p>We'd love to hear from you! Whether you have questions, want to discuss a project, or simply want to say hello, feel free to reach out.</p>
-
-    <!-- Optional Header Image -->
-    <div class="mb-4">
-        <img src="{% static 'images/contact_header.jpg' %}" class="img-fluid" alt="Contact Us" style="max-width: 100%; height: auto;">
-    </div>
 
     <h2>Contact Information</h2>
     <p><strong>Email:</strong> <a href="mailto:craigdickerson@reallydeepphotography.com">craigdickerson@reallydeepphotography.com</a></p>
