--- a/templates/base.html
+++ b/templates/base.html
@@ -104,10 +104,14 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center text-lg-start mt-5">
         <div class="container p-4">
-            <p>Follow us on:</p>
-            <a href="#" class="text-white me-4">Instagram</a>
-            <a href="#" class="text-white me-4">Facebook</a>
-            <a href="#" class="text-white me-4">Twitter</a>
+            <div class="d-flex flex-column align-items-center">
+                <p class="mb-2">Follow us on:</p>
+                <div class="d-flex flex-column flex-md-row gap-3">
+                    <a href="#" class="text-white text-decoration-none">Instagram <i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="text-white text-decoration-none">Facebook <i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" class="text-white text-decoration-none">Twitter <i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
         <div class="text-center p-3 bg-secondary">
             © 2024 Really Deep Photography
