--- a/home/templates/home/checkout.html
+++ b/home/templates/home/checkout.html
@@ -33,7 +33,7 @@
             <div id="card-errors" role="alert" class="text-danger"></div>
 
             <button id="checkout-button" class="btn btn-primary w-100 mt-3" type="button">
-                Proceed to Payment
+                Pay Now
             </button>
         </form>
     </div>
