--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -53,7 +53,7 @@
         </table>
         
         <div class="text-center mt-4">
-            <a href="{% url 'checkout' %}" class="btn btn-success btn-lg">Proceed to Checkout</a>
+            <a href="{% url 'checkout:checkout' %}" class="btn btn-success btn-lg">Proceed to Checkout</a>
             <a href="{% url 'gallery' %}" class="btn btn-secondary btn-lg">Continue Shopping</a>
         </div>
     {% else %}
